# ESP-3RDEYE

./: .gitignore  LICENSE  README.md  partitions.csv  sdkconfig.defaults
config/: README.md  auto_flash.py  config.ini  config.param  config_template.ini  copy.cmd  flash_firmware.py  pack.cmd  write_config.py
main/: CMakeLists.txt  Kconfig.projbuild  cxx_test.cpp  data_proc_obj.cpp  data_proc_obj.h  led.c  led.cpp  led_controller.cpp  led_controller.h  main.cpp  remote_proc.cpp  remote_proc.h  servo.cpp  servo.h  servo_group.cpp  servo_group.h  servor_input_adapter.h  udp_server.c  udp_server.cpp  udp_server.h
main/driver/inc/: connect_wifi.h  servo_group.h
main/driver/src/: connect_wifi.c  connect_wifi.cpp  led_controller.cpp  servo_group.cpp  udp_server.cpp
main/utils/inc/: data_proc_obj.h  esp_partition_param.h  esp_thread_helper.h  idata_proc.h  servor_input_adapter.h  var_hacker.hpp
main/utils/src/: data_proc_obj.cpp  esp_partition_param.cpp
